Project TimeSprinter {
  database_type: 'PostgreSQL'
  Note: 'Web app for organizing free time and tasks'
}

Table user {
  id int [pk]
  username varchar
  email varchar
  password varchar
  role AdminRole
  teams team [ref: <> team.id]
  activities leisure_activity [ref: > leisure_activity.id]
  tasks task [ref: > task.id]
}

Table site_admins {
  id int [pk]
  users "user" [ref: > user.id]
}

Table team {
  id int [pk]
  name varchar
  description varchar
  members "user" [ref: <> user.id]
  admins "user" [ref: <> user.id]
  projects project [ref: > project.id]
}

Table leisure_activity {
  id int [pk]
  name varchar
  description varchar
  start_date timestamp
  end_date timestamp
}

Table project {
  id int [pk]
  name varchar
  description varchar
  start_date timestamp
  end_date timestamp
  is_completed bool
  tasks task [ref: > task.id]
}

Table task {
  id int [pk]
  name varchar
  description varchar
  urgency boolean
  importance boolean
  is_completed bool
  start_date timestamp
  end_date timestamp
  dependencies task [ref: <> task.id]
}

enum AdminRole {
  "user"
  "admin"
}
